--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="image avatar"><img src="https://github.com/Luisfben/luisfben.github.io/blob/master/images/me2.jpg" alt="" /></a>
+				<a href="#" class="image avatar"><img src="luisfben.github.io/images/me2.jpg" alt="" /></a>
 				<!-- Tu perfil -->
 				<h1><strong>Luis Fernando Benavides Rengifo</strong>, Desarrollo de Proyectos de Software
 			</header>
