--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								<!-- Tu portafolio - Su imagen -->	
 								<img src="luisfben.github.io/images/calima.png" alt="" /></a>
 								<!-- Tu portafolio - Título -->	
-								<h3>Implementación de CRM</h3>
+								<h3>Implementación de CRM - En curso</h3>
 								<!-- Tu portafolio - Descripción -->	
 								<p>Implementación de herramienta encargada de registrar y centralizar la información de contactos con el objetivo de poder analizar e identificar estrategias de negocio. Se está trabajando en el análisis del proceso de venta y las necesidades que debe cubrir el sistema.</p>
 							</article>
