--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=GTM-UA-132665842-1"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-132665842-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
