--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="one">
 						<header class="major">
 							<!-- Tu perfil - Título -->
-							<h2>Desarrollo de Proyectos de Software - Senior Developer.</h2>
+							<h2>Desarrollo de Proyectos de Software - Senior Developer</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
 						<p>
