--- a/index.html
+++ b/index.html
@@ -191,8 +191,10 @@
 					<li><a href="https://www.facebook.com/Jessica-Yellow-716551978447705/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="https://growthhackers.com/members/jessicayellow" target="_blank" class="icon fa-bar-chart"><span class="label">Growth Hackers</span></a></li>
 					-->
+					
 					<li><a href="https://www.linkedin.com/in/luis-fernando-benavides-rengifo-8a5b054" target="_blank" class="icon fa-linkedin"><span class="label">Github</span></a></li>
 					<li><a href="https://github.com/Luisfben" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
+					<li><a href="https://github.com/Luisfben" target="_blank" class="icon stackoverflow"><span class="label">Stackoverflow</span></a></li>
 					<li><a href="mailto:lfbenavides@gmail.com" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				
