--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 					
 					<li><a href="https://www.linkedin.com/in/luis-fernando-benavides-rengifo-8a5b054" target="_blank" class="icon fa-linkedin"><span class="label">Github</span></a></li>
 					<li><a href="https://github.com/Luisfben" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
-					<li><a href="https://github.com/Luisfben" target="_blank" class="icon fa-stack-overflow"><span class="label">Stackoverflow</span></a></li>
+					<li><a href="https://stackexchange.com/users/15151129/luis-fernando-benavides" target="_blank" class="icon fa-stack-overflow"><span class="label">Stackoverflow</span></a></li>
 					<li><a href="mailto:lfbenavides@gmail.com" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				
