--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="one">
 						<header class="major">
 							<!-- Tu perfil - Título -->
-							<h2>Desarrollo de Proyectos de Software - Senior Developer</h2>
+							<h2>Desarrollo de Proyectos de Software</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
 						<p>
@@ -43,7 +43,7 @@
 						<br><br>
 						A lo largo de los años, me he formado en diferentes áreas relacionadas con el desarrollo  de software en el sector comercial, publico, industrial, salud y educación.
 						<br><br>
-						Soy programador Java, JavaScript, #C, Php, FoxPro, certificado por PMI en gestión de proyectos tradicionales y por ScrumStudy como Scrum Master, Especialista en Ingeniería de Software de la Pontificía Universidad Javeriana Cali.
+						Soy programador Java, JavaScript, #C, Php, FoxPro, certificado por PMI en gestión de proyectos tradicionales y por ScrumStudy como Scrum Master, Magíster en Ingeniería de Software de la Pontificía Universidad Javeriana Cali.
 						<br><br>
 						Para un contacto directo conmigo, escríbeme a lfbenavides@gmail.com o a través de mis diferentes redes.
 						</p>
@@ -262,7 +262,7 @@
 				
 		<!-- El área final -->				
 				<ul class="copyright">
-					<li>&copy; 2019 Luis Fernando Benavides</li>
+					<li>&copy; 2020 Luis Fernando Benavides</li>
 					<li><a href="https://platzi.com/cursos/marca-personal/" target="_blank">Platzi</a></li>
 					<li>Diseño: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 				</ul>
