--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<p>
 						Me apasiona la tecnología.
 						<br><br>
-						A lo largo de los años, me he formado en diferentes áreas relacionadas con el desarrollo  de software en el sector comercial, publico, industrial, salud y educación.
+						A lo largo de 17 años, me he formado en diferentes áreas relacionadas con el desarrollo  de software en el sector comercial, publico, industrial, salud y educación.
 						<br><br>
 						Soy programador Java, JavaScript, #C, Php, FoxPro, certificado por PMI en gestión de proyectos tradicionales y por ScrumStudy como Scrum Master, Magíster en Ingeniería de Software de la Pontificía Universidad Javeriana Cali.
 						<br><br>
