--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<link rel="stylesheet" href="https://luisfben.github.io/assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
-	<body id="top" style="background-color:#F3F3F3;">>
+	<body id="top" style="background-color:#F3F3F3;">
 		<!-- Google Tag Manager (noscript) -->
 		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T24RS32"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
