--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="https://luisfben.github.io/assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		
+		<style type="text/css">
+  			body {
+    			color: #333333;
+    			background-color: #F3F3F3;
+			}
+ 		</style>
 	</head>
-	<body id="top" style="background-color:#F3F3F3; color=#333333;">
+	<body id="top">
 		<!-- Google Tag Manager (noscript) -->
 		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T24RS32"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
