--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		
 		<style type="text/css">
-  			body {
-    			color: #333333;
-    			background-color: #F3F3F3;
+  			body,title{
+    			color:#333333;
+    			background-color:#F3F3F3;
 			}
  		</style>
 	</head>
