--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		
 		<style type="text/css">
-  			body,title{
+  			body{
     			color:#333333;
     			background-color:#F3F3F3;
 			}
