--- a/en/index.html
+++ b/en/index.html
@@ -254,7 +254,7 @@
 		
 		<!-- Tus redes sociales -->	
 			<footer id="footer">
-				<ul style="color:white;"><a href="luisfben.github.io/es/index.html" target="_self">Spanish</a> | <a href="luisfben.github.io/en/index.html" target="_self">English</a></ul>				
+				<ul style="color:white;"><a href="/es/index.html" target="_self">Spanish</a> | <a href="/en/index.html" target="_self">English</a></ul>				
 
 				<ul class="icons">
 					<!-- Conoce todos los íconos en http://fontawesome.io/icons/ -->
