--- a/es/index.html
+++ b/es/index.html
@@ -253,7 +253,7 @@
 		
 		<!-- Tus redes sociales -->	
 			<footer id="footer">
-				<ul style="color:white;"><a href="luisfben.github.io/es/index.html" target="_self">Español</a> | <a href="luisfben.github.io/en/index.html" target="_self">Ingles</a></ul>				
+				<ul style="color:white;"><a href="/es/index.html" target="_self">Español</a> | <a href="/en/index.html" target="_self">Ingles</a></ul>				
 
 				<ul class="icons">
 					<!-- Conoce todos los íconos en http://fontawesome.io/icons/ -->
