--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <script type="text/javascript">
 	if(navigator.language == "es"){
 		//window.open("file:///Users/mac/Documents/GitHub/luisfben.github.io/es/index.html","_self");	
-		window.open("luisfben.github.io/es/index.html","_self");	
+		window.open("/es/index.html","_self");	
 	}else{
 		//window.open("file:///Users/mac/Documents/GitHub/luisfben.github.io/en/index.html","_self");	
-		window.open("luisfben.github.io/en/index.html","_self");	
+		window.open("/en/index.html","_self");	
 	}
 </script>
