correction validation language and adjust photo link

--- a/en/index.html
+++ b/en/index.html
@@ -32,7 +32,7 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="image avatar"><img src="luisfben.github.io/images/me3.jpg" alt="" /></a>
+				<a href="#" class="image avatar"><img src="https://luisfben.github.io/images/me3.jpg" alt="" /></a>
 				<!-- Tu perfil -->
 				<h1><strong>Luis Fernando Benavides Rengifo</strong>, Software Project Development
 			</header>
