--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-	if(navigator.language == "es"){
+	if(navigator.language.substring(0, 2) == "es"){
 		//window.open("file:///Users/mac/Documents/GitHub/luisfben.github.io/es/index.html","_self");	
 		window.open("/es/index.html","_self");	
 	}else{
